2011-12-26  Andreas K. Foerster  <info@akfoerster.de>

	* lua/interactve_lua.lua: use "computer.xpm" as avatar

	* lua/lua-akfavatar-prg.c (ask_file, main): use luaL_loadfilex
	(file_reader, loadfile): removed

	* lua/lua-akfavatar-prg.c (run_executable):
	don't check for binary code, use luaL_loadbufferx

	* lua/characters_tables.lua:
	use hexadecimal UTF-8 presentation (same for C and Lua)

2011-12-25  Andreas K. Foerster  <info@akfoerster.de>

	* lua/*: ported to Lua-5.2

2011-12-13  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (arg0, run_executable): new functions
	(ask_file, main): adopted

	* lua/lua-akfavatar-prg.c (check_filename):
	don't ignore lua-akfavatar.lua anymore

	* avtaddons.h, arch.c (avta_arch_get_data): refactored

	* avtaddons.h, arch.c (avta_arch_get_member): new function

2011-12-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (start_screen): add Homepage

2011-12-05  Andreas K. Foerster  <info@akfoerster.de>

	* lua/multiplication.lua: fix

2011-12-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_search, set_datapath): new functions

2011-11-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c: mark some variables as volatile

2011-10-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_delay): new function
	avatar.c (avt_put_char): use SDL_Delay()
	lua/lua-avt.c (lavt_delay): new function

2011-10-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait): optimization: use timer and an event

2011-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_show_image): call avt_checkevent()
	lua/akfavatar-graphic.c (lgraphic_show): don't call avt_update()

2011-10-06  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: new file

	* avatar.c (avt_key): treat number pad depending on numlock

2011-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_disc): optional coordinates
